kanc_pamoi/src/tests/sample_code/should_succeed/multi_file/no_warnings/plus_commutative/src/eq.k
use super.*;

pub type Eq(T: Type, left: T, right: T) {
    refl(T: Type, z: T): Eq(T, z, z),
}