kanc_pamoi/src/tests/sample_code/should_fail/single_file/bind/fun_shadows_own_param.k
type U {
    u: U,
}

let f = fun g(g: U): U {
    U.u
};
